--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Email Sending Form</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
     <h1>Email Sending Form</h1>
@@ -21,14 +21,14 @@
             const data = { email };
 
             try {
-                const response = await fetch('/user/forgot-password', {
+                const response = await fetch('http://localhost:3004/user/forgot-password', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify(data),
                 });
-
+                
                 if (response.ok) {
                     const responseData = await response.json();
                     // Handle the response data as an object
